monitoring/alertmanager-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.alpha.openshift.io/serving-cert-secret-name: alertmanager-tls
  labels:
    name: alertmanager
  name: alertmanager
  namespace: "redhat-odh-monitoring"
spec:
  ports:
    - name: alertmanager
      port: 443
      protocol: TCP
      targetPort: 10443
  selector:
    deployment: prometheus
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    kubernetes.io/tls-acme: 'true'
  name: alertmanager
  namespace: redhat-odh-monitoring
spec:
  ports:
    targetPort: alertmanager
  to:
    kind: Service
    name: alertmanager
  tls:
    termination: Reencrypt
    insecureEdgeTerminationPolicy: Redirect
