monitoring/jupyterhub-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: jupyterhub
  name: jupyterhub
  namespace: redhat-ods-applications
spec:
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: jupyterhub
  wildcardPolicy: None
