monitoring/rhods-dashboard-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: odh-dashboard
  name: odh-dashboard
  namespace: redhat-ods-applications
spec:
  port:
    targetPort: 8443
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: odh-dashboard
  wildcardPolicy: None
